Добавил форматирование полей в добавлении карты в профиле, добавил функционал добавления карты

--- a/index.html
+++ b/index.html
@@ -250,12 +250,6 @@
                 <div>Способы оплаты</div>
                 <div class="swiper profile-cards">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide profile-card">
-                            <div>0865</div>
-                        </div>
-                        <div class="swiper-slide profile-card">
-                            <div>0865</div>
-                        </div>
                         <div class="swiper-slide profile-add-card">
                             <div class="button" id="profileAddCardButton">+</div>
                         </div>
@@ -278,11 +272,11 @@
             <div class="profile-card-addition-card">
                 <div>
                     <div class="profile-card-addition-card-label">Номер карты</div>
-                    <input class="profile-card-addition-card-input" placeholder="1234  5678  1234  5678" maxlength="16" data-number-input>
+                    <input class="profile-card-addition-card-input" placeholder="1234  5678  1234  5678" maxlength="19" data-number-input id="cardNumberInput">
                 </div>
                 <div>
                     <div class="profile-card-addition-card-label">Месяц/Год</div>
-                    <input class="profile-card-addition-card-input" placeholder="ММ/ГГ" maxlength="4" data-number-input>
+                    <input class="profile-card-addition-card-input" placeholder="ММ/ГГ" maxlength="5" data-number-input id="cardDateInput">
                 </div>
                 <div>
                     <div class="profile-card-addition-card-label">CVV/CVC</div>
