Изменил разметку свайпера карт в профиле

--- a/index.html
+++ b/index.html
@@ -246,16 +246,18 @@
         <div class="profile-container d-flex flex-column">
             <div>Адреса</div>
             <div>Моя история</div>
-            <div style="width: 100%;">
-                <div>Способы оплаты</div>
-                <div class="swiper profile-cards">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide profile-add-card">
-                            <div class="button" id="profileAddCardButton">+</div>
-                        </div>
+        </div>
+        <div style="width: 100%; margin: 33px 0;">
+            <div class="profile-container">Способы оплаты</div>
+            <div class="swiper profile-cards">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide profile-add-card">
+                        <div class="button" id="profileAddCardButton">+</div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="profile-container d-flex flex-column">
             <div>Программа лояльности</div>
             <div>Служба поддержки</div>
             <div>Документация</div>
